@@ -1,3 +1,9 @@
+2007-07-04  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclNamesp.c:   Fix case where a FQ cmd or ns was being
+	* generic/tclObj.c:      cached in a different interp, tkcon 
+	                         [Bug 1747512] 
+
 2007-07-03  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclCompExpr.c:	Revised #define values so that there
